# SofaScraper

./: .env.example  .gitignore  LICENSE  contributing.md  pyproject.toml  readme.md  requirements.txt  schema.sql  uv.json
src/sofascraper/: __init__.py  __main__.py
src/sofascraper/cli/: __init__.py  cli.py  options.py  types.py  validators.py
src/sofascraper/cli/commands/: __init__.py  dates.py  matches.py  tournaments.py
src/sofascraper/core/: __init__.py  base_scraper.py  playwright_manager.py  scraper_app.py  url_builder.py
src/sofascraper/core/football/: football_parser.py  football_scraper.py
src/sofascraper/core/parsers/: football_parser.py  tennis_parser.py
src/sofascraper/storage/: __init__.py  local_data_storage.py  pgsql_data_storage.py
src/sofascraper/storage/pgsql/: connection.py  football.py  tennis.py
src/sofascraper/tests/unit/utils/: test_utils.py
src/sofascraper/utils/: __init__.py  browser_helpers.py  constants.py  country_registry.py  enums.py  football_data_classes.py  progress_tracker.py  proxy_manager.py  setup_logging.py  sport_season_registry.py  sport_tournament_registry.py  utils.py
src/sofascraper/utils/dataclasses/: football_data_classes.py  tennis_data_classes.py
src/sofascraper/utils/json/: countries.json  seasons.json  tournaments.json
